[gd_scene load_steps=6 format=3 uid="uid://c66ql7lwlasgc"]

[ext_resource type="PackedScene" uid="uid://gfhvgn151ct0" path="res://Screens/main_screen.tscn" id="1_nfyd6"]
[ext_resource type="Script" path="res://Scripts/lesson_info.gd" id="2_ax1qb"]
[ext_resource type="Script" path="res://Scripts/WorkFieldExercises.gd" id="2_c75ck"]
[ext_resource type="Script" path="res://Scripts/choose_exercise_messages.gd" id="3_0ynly"]
[ext_resource type="Script" path="res://Scripts/ButtonTheoryOk.gd" id="5_wnxdf"]

[node name="MainScreen" instance=ExtResource("1_nfyd6")]
script = ExtResource("2_ax1qb")

[node name="WorkField" parent="." index="1"]
script = ExtResource("2_c75ck")

[node name="ButtonTheory" type="Button" parent="WorkField" index="0"]
layout_mode = 2
size_flags_horizontal = 3
text = "Теория"

[node name="ButtonPract" type="Button" parent="WorkField" index="1"]
layout_mode = 2
size_flags_horizontal = 3
text = "Теоретическая практика"

[node name="ButtonExercise" type="Button" parent="WorkField" index="2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Упражнения"

[node name="MessageBox" parent="ContainerLowerBar" index="0"]
script = ExtResource("3_0ynly")

[node name="ContainerTheoryPopUp" type="PanelContainer" parent="." index="4"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -396.5
offset_top = -297.0
offset_right = 396.5
offset_bottom = 297.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="ContainerTheoryPopUp" index="0"]
layout_mode = 2

[node name="LabelTheory" type="RichTextLabel" parent="ContainerTheoryPopUp/VBoxContainer" index="0"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true

[node name="ButtonTheoryOk" type="Button" parent="ContainerTheoryPopUp/VBoxContainer" index="1"]
layout_mode = 2
text = "Понятно"
script = ExtResource("5_wnxdf")

[connection signal="mouse_entered" from="WorkField/ButtonTheory" to="ContainerLowerBar/MessageBox" method="_on_button_theory_mouse_entered"]
[connection signal="mouse_exited" from="WorkField/ButtonTheory" to="ContainerLowerBar/MessageBox" method="_on_button_theory_mouse_exited"]
[connection signal="pressed" from="WorkField/ButtonTheory" to="WorkField" method="_on_button_theory_pressed"]
[connection signal="mouse_entered" from="WorkField/ButtonPract" to="ContainerLowerBar/MessageBox" method="_on_button_pract_mouse_entered"]
[connection signal="mouse_exited" from="WorkField/ButtonPract" to="ContainerLowerBar/MessageBox" method="_on_button_pract_mouse_exited"]
[connection signal="pressed" from="WorkField/ButtonPract" to="WorkField" method="_on_button_pract_pressed"]
[connection signal="mouse_entered" from="WorkField/ButtonExercise" to="ContainerLowerBar/MessageBox" method="_on_button_exercise_mouse_entered"]
[connection signal="mouse_exited" from="WorkField/ButtonExercise" to="ContainerLowerBar/MessageBox" method="_on_button_exercise_mouse_exited"]
[connection signal="pressed" from="WorkField/ButtonExercise" to="WorkField" method="_on_button_exercise_pressed"]
[connection signal="pressed" from="ContainerTheoryPopUp/VBoxContainer/ButtonTheoryOk" to="ContainerTheoryPopUp/VBoxContainer/ButtonTheoryOk" method="_on_pressed"]
